--- a/client/src/components/views/Footer/Footer.scss
+++ b/client/src/components/views/Footer/Footer.scss
@@ -20,5 +20,13 @@ $violet: #7950f2;
 }
 
 .foot{
-  background:#339af0;
+  background:#1b1b1b;
+  color:white;
+  .foot_content{
+    margin-left:0%;
+    padding:10%
+  }
+  .foot_content2{
+    margin-left:0%;
+  }
 }
